tests/fixtures/negative/style/WildcardImport.kt
package style

import kotlin.collections.listOf
import kotlinx.cinterop.*
import platform.AVFoundation.*

fun main() {
    val items = listOf(1, 2, 3)
    println(items)
}
